# RustSEUIF97

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  README_Python.md  pyproject.toml  rustfmt.toml  setup.cfg  setup.py
.github/: ci.yml  rust.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  macos.yml  rust.yml
benches/: if97_speed_benchmark.rs  speed_benchmark.rs
demo_using_lib/: Diagram_H-S.py  Diagram_T-S.py  Turbine_H-S.py  demo.c  demo.cs  demo.f08  demo.java  demo.py  demo.rs  demo.xlsm  demo_dylib.py  demo_pypi.py  makefile  mfortran.mk
dynamic_lib/windows_x64/: if97.dll.lib  seuif97.dll.lib
dynamic_lib/windows_x86/: if97.dll.lib  seuif97.dll.lib
examples/: example1.rs  example2.rs  example3.rs  input_pair.rs  input_pairs.rs  properties.rs  props.rs  simple.rs  simple2.rs  speed.rs
python/if97/: __init__.py
python/seuif97/: __init__.py
src/: c_if97.rs  cdecl_c_if97.rs  lib.rs  main.rs  python_if97.rs  rust_if97.rs  stdcall_c_if97.rs
src/algo/: fast_ipow.rs  fast_ipower.rs  mod.rs  polynomial.rs  polynomial_steps.rs  root.rs  sum_pow.rs  sum_product_power.rs
src/common/: boundaries.rs  constant.rs  mod.rs  propertry_id.rs  propertry_pairs.rs  propertry_thermal.rs  region.rs  transport_further.rs
src/r1/: mod.rs  region1.rs  region1_T_phps.rs  region1_gfe.rs  region1_pT.rs  region1_pT_ext.rs  region1_p_hs.rs  region1_pair_ext.rs
src/r2/: mod.rs  region2.rs  region2_T_ph.rs  region2_T_ps.rs  region2_gfe.rs  region2_pT.rs  region2_pT_ext.rs  region2_p_hs.rs  region2_pair_ext.rs
src/r3/: mod.rs  region3.rs  region3_Td.rs  region3_Td_ext.rs  region3_Tv_phps.rs  region3_hfe.rs  region3_p_hs.rs  region3_pair_ext.rs  region3_v_pT.rs  region3_v_subregion_pT.rs
src/r4/: mod.rs  region4.rs  region4_T_hs.rs  region4_pTx.rs  region4_pair_ext.rs  region4_sat_pT.rs
src/r5/: mod.rs  region5.rs  region5_backward.rs  region5_gfe.rs  region5_pT.rs  region5_pT_ext.rs  region5_pair_ext.rs  region5_ph_ps_hs.rs
tests/: cross_test.rs  hs_test.rs  hxsx_test.rs  ph_test.rs  ps_test.rs  pt_test.rs  pv_test.rs  region1_test.rs  region2_test.rs  region3_test.rs  region4_test.rs  region5_test.rs  th_test.rs  trans_test.rs  ts_test.rs  tv_test.rs
tests/common/: mod.rs
