[metadata]
name = seuif97
version = 2.1.5
author=Cheng Maohua
author_email=cmh@seu.edu.cn
keywords = IAPWS-IF97, IF97
license = MIT
url = https://github.com/thermalogic/RustSEUIF97
description= The Python API of the high-speed IAPWS-IF97 package in Rust
long_description = file: README_Python.md
long_description_content_type = text/markdown
[options]
packages = seuif97
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.0
include_package_data = True
